Login y seguridad en endpoints